# photo-friends

./: .coveragerc  .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  build-docker.sh  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  run-docker.sh  setting_prod_template.py  settings-prod.py
.github/workflows/: ci.yml
ansible/: ansible.cfg  install_photo-friends.yaml  inventory.ini
ansible/role/common/files/configs/: docker-compose.yaml  nginx-photo.conf.jinja2
app/: admin.py  apps.py  forms.py  models.py  views.py
app/locale/fr/LC_MESSAGES/: django.po
app/migrations/: 0001_initial.py  0002_auto_20211114_1648.py  0003_auto_20211128_1427.py  0004_alter_upload_thumbnail.py  0005_alter_upload_uploader.py
app/static/app/css/: main.css
app/templates/app/: album_detail.html  album_form.html  base.html
app/templatetags/: app_extras.py
photofriends/: asgi.py  settings.py  urls.py  wsgi.py
